--- a/login.html
+++ b/login.html
@@ -7,27 +7,36 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
-
+      .card {
+          margin-left:auto;
+          margin-right:auto;
+          padding-left:10px;
+          padding-right:10px;
+        }
+      #login {
+        margin-top:100px;
+      }
     </style>
-
 
   </head>
 
 <body>
-  <div class="card" style="width:20rem;">
-    <div class="card-body">
-      <form>
-        <div class="form-group">
-          <input type="lastname" class="form-control" placeholder="User name, or Email">
-        </div>
-        <div class="form-group">
-          <input type="lastname" class="form-control" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-danger"> > Log in</button>
-      </form>
+  <div id="login">
+    <div class="card" style="width:20rem;">
+      <div class="card-body">
+        <form>
+          <div class="form-group">
+            <input type="lastname" class="form-control" placeholder="User name, or Email">
+          </div>
+          <div class="form-group">
+            <input type="lastname" class="form-control" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-danger"> > Log in</button>
+        </form>
+      </div>
     </div>
+    <br>
   </div>
-  <br>
   <div class="card" style="width: 20rem;">
     <div class="card-body">
       <p class="card-text" style=text-align:center;>Don't have an account? <a href="#" class="card-link">Sign up</a></p>
