--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
+      .card {
+          margin-left:auto;
+          margin-right:auto;
+          padding-left:10px;
+          padding-right:10px;
+        }
+      #signup {
+        margin-top:100px;
+      }
       
     </style>
 
@@ -14,31 +23,33 @@
   </head>
 
 <body>
-  <div class="card" style="width:20rem;">
-    <div class="card-body">
-      <form>
-        <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email address" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-          <input type="firstname" class="form-control" placeholder="Full name">
-        </div>
-        <div class="form-group">
-          <input type="lastname" class="form-control" placeholder="User name">
-        </div>
-        <div class="form-group">
-          <input type="lastname" class="form-control" placeholder="Password">
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="Check1">
-          <label class="form-check-label" for="Check1">저는 만 14세 이상입니다.</label>
-        </div>
-        <button type="submit" class="btn btn-danger"> > Sign up</button>
-      </form>
+  <div id="signup">
+    <div class="card" style="width:20rem;">
+      <div class="card-body">
+        <form>
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Email address" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <input type="firstname" class="form-control" placeholder="Full name">
+          </div>
+          <div class="form-group">
+            <input type="lastname" class="form-control" placeholder="User name">
+          </div>
+          <div class="form-group">
+            <input type="lastname" class="form-control" placeholder="Password">
+          </div>
+          <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="Check1">
+            <label class="form-check-label" for="Check1">저는 만 14세 이상입니다.</label>
+          </div>
+          <button type="submit" class="btn btn-danger"> > Sign up</button>
+        </form>
+      </div>
     </div>
+    <br>
   </div>
-  <br>
   <div class="card" style="width: 20rem;">
     <div class="card-body">
       <p class="card-text" style=text-align:center;>Have an account? <a href="#" class="card-link">Log in</a></p>
