--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
+      /* 로그인 카드 여백설정 */
       .card {
           margin-left:auto;
           margin-right:auto;
@@ -21,6 +22,7 @@
   </head>
 
 <body>
+  <!-- 로그인 구성 -->
   <div id="login">
     <div class="card" style="width:20rem;">
       <div class="card-body">
@@ -31,12 +33,14 @@
           <div class="form-group">
             <input type="lastname" class="form-control" placeholder="Password">
           </div>
+          <!-- submit 버튼 생성 -->
           <button type="submit" class="btn btn-danger"> > Log in</button>
         </form>
       </div>
     </div>
     <br>
   </div>
+  <!-- 회원가입 link 지정 -->
   <div class="card" style="width: 20rem;">
     <div class="card-body">
       <p class="card-text" style=text-align:center;>Don't have an account? <a href="#" class="card-link">Sign up</a></p>
