--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
+      /* 회원가입 카드 여백설정 */
       .card {
           margin-left:auto;
           margin-right:auto;
@@ -23,6 +24,7 @@
   </head>
 
 <body>
+  <!-- 회원가입 구성 -->
   <div id="signup">
     <div class="card" style="width:20rem;">
       <div class="card-body">
@@ -50,6 +52,7 @@
     </div>
     <br>
   </div>
+  <!-- 로그인 link 지정 -->
   <div class="card" style="width: 20rem;">
     <div class="card-body">
       <p class="card-text" style=text-align:center;>Have an account? <a href="#" class="card-link">Log in</a></p>
