--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,17 @@
     <div id="gallery">
         <div class="container">
             <div class="row header">
-                <div class="col-md-3"></div>
+                <div class="col-md-3">
+                    <div class="card bg-dark text-white">
+                        <img src="" class="card-img" alt="gallery">
+                        <div class="card-img-overlay">
+                          <p class="card-text">open</p>
+                        </div>
+                      </div>
+                </div>
                 <div class="col-md-6"></div>
-                <div class="col-md-3"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-1"></div>
             </div>
             <div class="row section">
                 <div class="col-md-4"></div>
