--- a/kyuna/joinmodal.html
+++ b/kyuna/joinmodal.html
@@ -31,6 +31,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <!-- signup link 지정 -->
               <button type="button" class="btn btn-danger">Continue</button>
             </div>
           </div>
