--- a/kyuna/gallery.html
+++ b/kyuna/gallery.html
@@ -5,45 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+    .grid{
+        margin-left:auto;
+        margin-right:auto;
+        padding-left:50px;
+        padding-right:50px;
+        border:1px solid #ccc; 
+        text-align:center;}
+
+    .griditem{ 
+        width:200px;
+        height:300px;
+        border:1px solid #222; 
+        margin-bottom:40px;
+        margin-top:50px;    
+    }
+
+    .griditem.gt2{height:200px;}
+    .griditem.gt3{height:150px;}
+    .griditem.gt5{height:200px;}
+    .griditem.gt6{height:150px;}
+    .griditem.gt7{height:200px;}
+    .griditem.gt8{height:150px;}
+    .griditem.gt9{height:200px;}
+    .griditem.gt9{height:150px;}
         
     </style>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="jquery.masonry.min.js"></script>
+    <script src="jquery.imagesloaded.min.js"></script>
+    <script>
+        $('#grid').masonry({
+            itemSelector: '.griditem',
+            columnWidth: 200,
+            gutter: 10,
+            horizontalOrder: true,
+            // originLeft: false //왼쪽부터 정렬 
+            // originTop: false //바닥부터
+            // transitionDuration: '0.2s' //위치 전환 시간
+        });
+
+    </script>
 </head>
 <body>
     <!-- 갤러리 구성 -->
     <div id="gallery">
         <div class="container">
-            <div class="row header">
-                <div class="col-md-3">
-                    <div class="card bg-dark text-white">
-                        <img src="" class="card-img" alt="gallery">
-                        <div class="card-img-overlay">
-                          <p class="card-text">open</p>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-md-6"></div>
-                <div class="col-md-2"></div>
-                <div class="col-md-1"></div>
-            </div>
-            <div class="row section">
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-            </div>
-            <div class="row footer">
-                <div class="col-xs-12"></div>
+            <div class="grid">
+                <div class="griditem">1</div>
+                <div class="griditem gt2">2</div>
+                <div class="griditem gt3">3</div>
+                <div class="griditem gt4">4</div>
+                <div class="griditem gt5">5</div>
+                <div class="griditem gt6">6</div>
+                <div class="griditem gt7">7</div>
+                <div class="griditem gt8">8</div>
+                <div class="griditem gt9">9</div>
+                <div class="griditem gt10">10</div>
             </div>
         </div>
     </div>
