--- a/lynn/bbom_main_0.html
+++ b/lynn/bbom_main_0.html
@@ -31,6 +31,9 @@
   <!-- 폰트 어썸 cdn >> 아이콘 넣을 때 사용 -->
   <script src="https://kit.fontawesome.com/3c342ee7e3.js" crossorigin="anonymous"></script>
 
+  <!-- 부트스트랩 cdn -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+
 </head>
 <!-- css 모든 변경사항에 변경 주석 달아뒀습니당 -->
 <body>
@@ -74,7 +77,7 @@
           <br>
           <br>
           <br>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Sign in</span></a></li>
+          <li><a href="#로그인 모달" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Sign in</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -88,20 +91,6 @@
       <p>We're <span class="typed" data-typed-items="Developers, Pioneers"></span></p>
     </div>
   </section><!-- End Hero -->
-
-  <main id="main">
-
-   
-
-
-    
-
-   
-  
-
-   
-
-  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -130,6 +119,10 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- 부트스트랩 cdn -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
