--- a/kyuna/gallery.html
+++ b/kyuna/gallery.html
@@ -1,3 +1,10 @@
+<!-- 
++ img 추가 + 인피니트스크롤
++ #태그 버튼 본문 헤더부분
++ 헤더에 로고 넣기
++ search 추가?
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* 폰트 설정 */
+        /* 폰트 불러와서 적용 */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
 
@@ -43,17 +50,15 @@
         
     </style>
 
-     <script src="/path/to/masonry.pkgd.min.js"></script>
-
 </head>
 
 <body>
     <!-- 갤러리 구성 -->
     <div id="gallery">
         <div class="container">
-
+            <!-- 갤러리 헤더 -->
             <h1 class="title">gallery</h1>
-
+            <!-- 갤러리 본문 -->
             <div class="image-container">
                 <img src="images/img1.jpg" alt="">
                 <img src="images/img2.jpg" alt="">
