--- a/kyuna/joinmodal.html
+++ b/kyuna/joinmodal.html
@@ -1,10 +1,12 @@
+<!-- 트리거 navbar 변경 & link 연결-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>joinmodal</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/220bfd6950.js" crossorigin="anonymous"></script>
 </head>
