--- a/kyuna/login.html
+++ b/kyuna/login.html
@@ -1,11 +1,11 @@
-<!-- 상단에 로고 추가 & link 연결-->
+<!-- link 연결할 것-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
       /* 로그인 카드 여백설정 */
@@ -18,6 +18,7 @@
       #login {
         margin-top:100px;
       }
+
     </style>
 
   </head>
@@ -26,6 +27,8 @@
   <!-- 로그인 구성 -->
   <div id="login">
     <div class="card" style="width:20rem;">
+      <br>
+      <img src="images/logo.png" class="card-img-top" alt="logo">
       <div class="card-body">
         <form>
           <div class="form-group">
