--- a/kyuna/signup.html
+++ b/kyuna/signup.html
@@ -1,11 +1,11 @@
-<!-- 상단에 로고 추가 & link 연결-->
+<!-- link 연결할 것-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>signup</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
       /* 회원가입 카드 여백설정 */
@@ -15,6 +15,7 @@
           padding-left:10px;
           padding-right:10px;
         }
+
       #signup {
         margin-top:100px;
       }
@@ -28,6 +29,8 @@
   <!-- 회원가입 구성 -->
   <div id="signup">
     <div class="card" style="width:20rem;">
+      <br>
+      <img src="images/logo.png" class="card-img-top" alt="logo">
       <div class="card-body">
         <form>
           <div class="form-group">
