--- a/Bbompage/joinmodal.html
+++ b/Bbompage/joinmodal.html
@@ -1,4 +1,4 @@
-<!-- 트리거 navbar 변경 & link 연결-->
+<!-- 트리거 navbar 변경 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -34,7 +34,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <!-- signup link 지정 -->
-              <button type="button" class="btn btn-danger">Continue</button>
+              <a button type="button" href="./signup.html" class="btn btn-danger">Continue</button></a>
             </div>
           </div>
         </div>
