--- a/Bbompage/login.html
+++ b/Bbompage/login.html
@@ -28,6 +28,8 @@
     <!-- 로그인 구성 -->
     <div id="login">
       <div class="card" style="width: 20rem">
+        <br>
+        <img src="images/logo.png" class="card-img-top" alt="logo">
         <div class="card-body">
           <form>
             <div class="form-group">
