--- a/Bbompage/signup.html
+++ b/Bbompage/signup.html
@@ -28,6 +28,8 @@
   <!-- 회원가입 구성 -->
   <div id="signup">
     <div class="card" style="width:20rem;">
+      <br>
+      <img src="images/logo.png" class="card-img-top" alt="logo">
       <div class="card-body">
         <form>
           <div class="form-group">
@@ -56,7 +58,7 @@
   <!-- 로그인 link 지정 -->
   <div class="card" style="width: 20rem;">
     <div class="card-body">
-      <p class="card-text" style=text-align:center;>Have an account? <a href="#" class="card-link">Log in</a></p>
+      <p class="card-text" style=text-align:center;>Have an account? <a href="./login.html" class="card-link">Log in</a></p>
     </div>
   </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
