--- a/kyuna/gallery.html
+++ b/kyuna/gallery.html
@@ -140,7 +140,7 @@
         <!-- 갤러리 본문 -->
         <div class="gallery">
             <!-- 헤더 본문 (로고 넣기?)) -->
-            <div class="logo"><img src="images/logo.png"></div>
+            <div class="logo"><img src="images/logo.png" width="400"></div>
             <!-- nav -->
             <div class="wrapper">
                 <nav>
