--- a/Bbompage/1_mainpage.html
+++ b/Bbompage/1_mainpage.html
@@ -1,5 +1,6 @@
 <!--레퍼런스 : instagram-->
 <!-- main page -->
+<!-- user list에 + 버튼 추가 (업로드 페이지로 링크)-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -268,6 +269,15 @@
                     height: auto;
                     background-color: rgb(230, 232, 227);
                   "
+              /></a>
+            </li>
+            <li>
+              <!-- 게시글 업로드 창으로 링크 연결 -->
+              <a href="./upload.html">
+                <img
+                  src="https://cdn.pixabay.com/photo/2021/12/21/04/58/add-6884593__480.png"
+                  class="rounded-circle"
+                  style="width: 6rem; height: auto; background: transparent"
               /></a>
             </li>
           </ul>
