--- a/Bbompage/login.html
+++ b/Bbompage/login.html
@@ -28,8 +28,10 @@
     <!-- 로그인 구성 -->
     <div id="login">
       <div class="card" style="width: 20rem">
-        <br>
-        <img src="images/logo.png" class="card-img-top" alt="logo">
+        <br />
+        <a href="./0_landingpage.html"
+          ><img src="images/logo.png" class="card-img-top" alt="logo"
+        /></a>
         <div class="card-body">
           <form>
             <div class="form-group">
