--- a/Bbompage/upload.html
+++ b/Bbompage/upload.html
@@ -28,7 +28,9 @@
     <div id="upload">
       <div class="card" style="width: 20rem">
         <br />
-        <img src="images/logo.png" class="card-img-top" alt="logo" />
+        <a href="./0_landingpage.html"
+          ><img src="images/logo.png" class="card-img-top" alt="logo"
+        /></a>
         <div class="card-body">
           <form>
             <div class="form-group">
