--- a/Bbompage/1_mainpage.html
+++ b/Bbompage/1_mainpage.html
@@ -144,7 +144,7 @@
     <!-- 부트스트랩 cdn -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="script2.js"></script>
     <div class="container">
       <!--제목-->
       <div class="row header">
