--- a/Bbompage/1_mainpage.html
+++ b/Bbompage/1_mainpage.html
@@ -160,6 +160,7 @@
         <div class="col-md-1"></div>
       </div>
       <!--슬라이드 가능한 유저 리스트-->
+      <!-- 이모지 누르면 개인 노션 포트폴리오로 연결-->
       <div class="box">
         <div id="tab">
           <ul>
@@ -176,7 +177,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/2.png"
                   class="rounded-circle"
@@ -188,7 +189,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/10.png"
                   class="rounded-circle"
@@ -200,7 +201,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/8.png"
                   class="rounded-circle"
@@ -212,7 +213,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/3.png"
                   class="rounded-circle"
@@ -224,7 +225,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/4.png"
                   class="rounded-circle"
@@ -236,7 +237,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/5.png"
                   class="rounded-circle"
@@ -248,7 +249,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/6.png"
                   class="rounded-circle"
@@ -260,7 +261,7 @@
               /></a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://famelee.oopy.io/">
                 <img
                   src="profileimage/7.png"
                   class="rounded-circle"
