--- a/Bbompage/1_mainpage.html
+++ b/Bbompage/1_mainpage.html
@@ -169,11 +169,7 @@
                 <img
                   src="profileimage/1.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -181,11 +177,7 @@
                 <img
                   src="profileimage/2.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -193,11 +185,7 @@
                 <img
                   src="profileimage/10.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -205,11 +193,7 @@
                 <img
                   src="profileimage/8.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -217,11 +201,7 @@
                 <img
                   src="profileimage/3.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -229,11 +209,7 @@
                 <img
                   src="profileimage/4.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -241,11 +217,7 @@
                 <img
                   src="profileimage/5.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -253,11 +225,7 @@
                 <img
                   src="profileimage/6.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -265,11 +233,7 @@
                 <img
                   src="profileimage/7.png"
                   class="rounded-circle"
-                  style="
-                    width: 6rem;
-                    height: auto;
-                    background-color: rgb(230, 232, 227);
-                  "
+                  style="width: 6rem; height: auto; background-color: pink"
               /></a>
             </li>
             <li>
@@ -278,7 +242,7 @@
                 <img
                   src="https://cdn.pixabay.com/photo/2021/12/21/04/58/add-6884593__480.png"
                   class="rounded-circle"
-                  style="width: 6rem; height: auto; background: transparent"
+                  style="width: 6rem; height: auto"
               /></a>
             </li>
           </ul>
@@ -552,16 +516,14 @@
         <div class="c12 col-md-4">
           <div class="card" style="width: 21rem; height: 21rem">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPnQwtAl2gJxbjA32xjLg_H0pa8T8FWKmaQg&usqp=CAU"
+              src="https://cdn.pixabay.com/photo/2019/04/13/22/50/concert-4125832__480.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
             />
             <div class="card-body">
-              <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-subtitle">#HOBBY</p>
+              <p class="card-text">O | 뮤지컬 보고 왔어여</p>
               <button
                 id="like"
                 type="button"
@@ -576,16 +538,14 @@
         <div class="c13 col-md-4">
           <div class="card" style="width: 21rem; height: 21rem">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPnQwtAl2gJxbjA32xjLg_H0pa8T8FWKmaQg&usqp=CAU"
+              src="https://cdn.pixabay.com/photo/2016/11/29/04/17/bonfire-1867275__340.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
             />
             <div class="card-body">
-              <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-subtitle">#HOBBY</p>
+              <p class="card-text">N | 캠핑 너무 재밌어~~</p>
               <button
                 id="like"
                 type="button"
@@ -600,16 +560,14 @@
         <div class="c14 col-md-4">
           <div class="card" style="width: 21rem; height: 21rem">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPnQwtAl2gJxbjA32xjLg_H0pa8T8FWKmaQg&usqp=CAU"
+              src="https://cdn.pixabay.com/photo/2017/09/30/15/10/plate-2802332__340.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
             />
             <div class="card-body">
               <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-text">W | 학원 앞에 피자집 새로 생김 존맛</p>
               <button
                 id="like"
                 type="button"
@@ -624,16 +582,14 @@
         <div class="c15 col-md-4">
           <div class="card" style="width: 21rem; height: 21rem">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPnQwtAl2gJxbjA32xjLg_H0pa8T8FWKmaQg&usqp=CAU"
+              src="https://cdn.pixabay.com/photo/2016/11/22/23/53/starfish-1851289__480.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
             />
             <div class="card-body">
-              <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-subtitle">#PIC</p>
+              <p class="card-text">C | 제가 찍은 사진</p>
               <button
                 id="like"
                 type="button"
@@ -648,16 +604,14 @@
         <div class="c1 col-md-4">
           <div class="card" style="width: 21rem; height: 21rem">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPnQwtAl2gJxbjA32xjLg_H0pa8T8FWKmaQg&usqp=CAU"
+              src="https://cdn.pixabay.com/photo/2019/10/07/10/40/keyboard-4532328__480.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
             />
             <div class="card-body">
-              <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-subtitle">#GOODS</p>
+              <p class="card-text">E | 맥북이랑 키보드랑 마우스 질렀어여</p>
               <button
                 id="like"
                 type="button"
@@ -672,16 +626,14 @@
         <div class="c2 col-md-4">
           <div class="card" style="width: 21rem; height: 21rem">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPnQwtAl2gJxbjA32xjLg_H0pa8T8FWKmaQg&usqp=CAU"
+              src="https://media.istockphoto.com/photos/seoul-south-korea-skyline-picture-id521707831?b=1&k=20&m=521707831&s=170667a&w=0&h=IW-PqLm_R4Khy3fS7XO8cnQ8E_pQMW1WHo3tLGpqeeo="
               class="card-img-top"
               alt="..."
               height="200px"
             />
             <div class="card-body">
-              <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-subtitle">#PIC</p>
+              <p class="card-text">W | 이건 친구가 찍은 사진</p>
               <button
                 id="like"
                 type="button"
@@ -702,10 +654,8 @@
               height="200px"
             />
             <div class="card-body">
-              <p class="card-subtitle">#FOOD</p>
-              <p class="card-text">
-                1 | 야옹 안녕하세요 저는 오늘 숙제를 다 했어요
-              </p>
+              <p class="card-subtitle">#PET</p>
+              <p class="card-text">G | 야옹</p>
               <button
                 id="like"
                 type="button"
