--- a/Bbompage/0_landingpage.html
+++ b/Bbompage/0_landingpage.html
@@ -56,7 +56,7 @@
           <!-- 폰트 어썸 > 구글 드라이브, 깃허브, 메일-->
           <a href="https://drive.google.com/drive/folders/1SSMjIaDcwniFaLUaXBuU9Ry1IjYbaq-j" class="google-drive"><i class="fa-brands fa-google-drive"></i></a>
           <a href="https://github.com/bnv20/cakd7" class="github"><i class="fa-brands fa-github"></i></a>
-          <a href="#" class="mail"><i class="fa-solid fa-envelope"></i></a>
+          <a href="https://mail.google.com/mail/" class="mail"><i class="fa-solid fa-envelope"></i></a>
           <a href="#" class="dm"><i class="fa-solid fa-paper-plane"></i></a>
           <a href="#" class="zoom"><i class="fa-solid fa-video"></i></a>
         </div>
@@ -66,7 +66,7 @@
       <!-- 네브바 수정 css에서 (햄버거 배경, 컬러 변경)-->
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="커버페이지로" class="nav-link scrollto active"><i class="fa-solid fa-house-chimney"></i> <span>Home</span></a></li>
+          <li><a href="./0_landingpage.html" class="nav-link scrollto active"><i class="fa-solid fa-house-chimney"></i> <span>Home</span></a></li>
           <!-- 메인 페이지 연결-->
           <li><a href="./1_mainpage.html" class="nav-link scrollto"><i class="bx bx-user"></i> <span>My Page</span></a></li>
           <!-- 갤러리 연결-->
