--- a/Bbompage/2_gallery.html
+++ b/Bbompage/2_gallery.html
@@ -84,7 +84,7 @@
  
          nav .items .item:hover {
             color: white;
-            background: pink;
+            background-color: pink;
         }
          
          /* 갤러리 스타일 지정 */
@@ -179,7 +179,7 @@
                         <span class="item" data-name="길동이" style= background-image:url(./profileimage/5.png)></span>
                         <span class="item" data-name="후아유" style= background-image:url(./profileimage/6.png)></span>
                         <span class="item" data-name="아무나" style= background-image:url(./profileimage/7.png)></span>
-                        <span class="item" data-name="누구야" style= background-image:url(./profileimage/9.png)></span>
+
                      </div>
                  </nav>
              </div>
@@ -195,7 +195,7 @@
                  <div class="image" data-name="아무나"><img src="images/img5.jpg" alt=""></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh4.jpg" alt="정현"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh5.jpg" alt="정현"></div>
-                 <div class="image" data-name="누구야"><img src="images/img6.jpg" alt=""></div>
+                 <div class="image" data-name="아무나"><img src="images/img6.jpg" alt=""></div>
                  <div class="image" data-name="개똥이"><img src="images/img7.jpg" alt=""></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh6.jpg" alt="정현"></div>
                  <div class="image" data-name="길동이"><img src="images/img8.jpg" alt=""></div>
