--- a/Bbompage/2_gallery.html
+++ b/Bbompage/2_gallery.html
@@ -185,26 +185,36 @@
              </div>
              <!-- 갤러리 이미지 -->
              <div class="image-container">
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj1.jpeg" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh1.jpg" alt="정현"></div>
                  <div class="image" data-name="개똥이"><img src="images/img1.jpg" alt=""></div>
                  <div class="image" data-name="개똥이"><img src="images/img2.jpg" alt=""></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj2.jpeg" alt="명진"></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj3.png" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh2.jpg" alt="정현"></div>
                  <div class="image" data-name="개똥이"><img src="images/img3.jpg" alt=""></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj4.jpg" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh3.jpg" alt="정현"></div>
                  <div class="image" data-name="후아유"><img src="images/img4.jpg" alt=""></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj5.jpg" alt="명진"></div>
                  <div class="image" data-name="아무나"><img src="images/img5.jpg" alt=""></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh4.jpg" alt="정현"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh5.jpg" alt="정현"></div>
                  <div class="image" data-name="아무나"><img src="images/img6.jpg" alt=""></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj6.jpeg" alt="명진"></div>
                  <div class="image" data-name="개똥이"><img src="images/img7.jpg" alt=""></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh6.jpg" alt="정현"></div>
                  <div class="image" data-name="길동이"><img src="images/img8.jpg" alt=""></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj10.jpeg" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh7.jpg" alt="정현"></div>
                  <div class="image" data-name="길동이"><img src="images/img9.jpg" alt=""></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj7.jpeg" alt="명진"></div>
                  <div class="image" data-name="후아유"><img src="images/img10.jpg" alt=""></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh8.jpg" alt="정현"></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj8.jpeg" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh9.jpg" alt="정현"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh10.jpg" alt="정현"></div>
+                 <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj9.jpg" alt="명진"></div>
              </div>
              
              <script src="script.js"></script>
