--- a/Bbompage/2_gallery.html
+++ b/Bbompage/2_gallery.html
@@ -163,7 +163,7 @@
          <!-- 갤러리 본문 -->
          <div class="gallery">
              <!-- 헤더 본문 -->
-             <div class="logo"><img src="images/logo.png" width="400"></div>
+             <div class="logo" ><a href="./0_landingpage.html"><img src="images/logo.png" width="400"></a></div>
              <!-- nav -->
              <div class="wrapper">
                  <nav>
